# book-collection

./: Dockerfile  README.md  decorators.py  docker-compose.yml  generators.py  lambda_sample.py  list_compre.py  tox.ini  while.py
app/: entrypoint.sh  pyproject.toml
app/app/: settings.py  urls.py
app/book/: admin.py  decorators.py  factories.py  models.py  serializers.py  tests.py  urls.py  views.py
app/book/migrations/: 0001_initial.py  0002_auto_20210124_1306.py  0003_auto_20210124_1412.py  0004_auto_20210125_1728.py
app/core/: admin.py  models.py
app/core/migrations/: 0001_initial.py
